tests/baselines/reference/declFilePrivateStatic.errors.txt
==== tests/cases/compiler/declFilePrivateStatic.ts (4 errors) ====
    
    class C {
        private static x = 1;
        static y = 1;
    
        private static a() { }
        static b() { }
    
        private static get c() { return 1; }
                           ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static get d() { return 1; }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        private static set e(v) { }
                           ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static set f(v) { }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }